@@ -6,6 +6,13 @@ Version 11     ???
 
 
 
+Version 10     Live Server Fixes
+
+--Even more detailed game logging to catch DENIED bug during wait_move.
+
+
+
+
 
 Version 10     2014-December-2
 
